--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,8 @@
         android:gravity="center"
         >
 
+
+
         <Button
             android:id="@+id/Loginbu"
             android:layout_width="match_parent"
@@ -119,7 +121,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:visibility="visible"
+            android:visibility="invisible"
             android:indeterminateTint="@color/colorPrimaryDark"
             android:indeterminateTintMode="src_in"
              />
