--- a/app/src/main/res/layout/activity_userprofile.xml
+++ b/app/src/main/res/layout/activity_userprofile.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/publicap"
+    android:background="@color/gray1"
+    android:weightSum="3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="youssef.com.alex_commercial.Userprofile">
 
     <RelativeLayout
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
+        android:layout_weight="1"
 
         android:elevation="16dp"
         android:orientation="vertical"
@@ -55,6 +57,12 @@
             android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1.4"
+        >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -168,9 +176,8 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:layout_marginBottom="40dp"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
@@ -187,9 +194,11 @@
             android:id="@+id/spinner"></Spinner>
 
     </LinearLayout>
+    </LinearLayout>
     <Button
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_weight=".6"
+        android:layout_height="0dp"
         android:background="@color/blue"
         android:text="save"
         android:id="@+id/saveinfo"
