--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gray1">#E0E0E0</color>
     <color name="gray2">#BDBDBD</color>
     <color name="gray3">#757575</color>
+    <color name="publiccolor">#E8EAF6</color>
 </resources>
