--- a/app/src/main/res/layout/commentrow.xml
+++ b/app/src/main/res/layout/commentrow.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+
+
+<LinearLayout
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layoutDirection="rtl">
@@ -11,19 +21,22 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:background="@color/publicap"
+    <LinearLayout
+        android:layout_width="300dp"
+        android:orientation="vertical"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:padding="10dp"
+            android:background="@drawable/comshape"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:padding="3dp"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:text="Ahmed mohamed"
             android:textStyle="bold"
             android:id="@+id/nameshow"
@@ -36,11 +49,36 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/nameshow"
-            android:padding="5dp"
-            android:text="الحمد لله رب العالمين الرحمن الرحيم مالك يوم الدين اياك نعبد واياك نستعين اهدنا الصراط المستقيم صراط اذين انعمت عليهم غير المغضوب عليهم ولا الضالين "
+            android:text="الحمد لله رب العالمين الرحمن الرحيم مالك يوم الدين اياك نعبد واياك نستعين اهدنا الصراط المستقيم صراط اذين انعمت عليهم غير المغضو عليهم ولا الضالين "
             android:textColor="@color/black"
-            android:textSize="20sp" />
-    </RelativeLayout>
+            android:textSize="17sp" />
+        </LinearLayout>
+    </LinearLayout>
 
 
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginStart="80dp"
+        android:layoutDirection="rtl"
+        android:layout_height="match_parent"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="التوقيت"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="اعجبني"
+            android:layout_marginStart="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_marginStart="25dp"
+            android:text="رد"/>
+    </LinearLayout>
 </LinearLayout>
