--- a/app/src/main/res/layout/mainapp.xml
+++ b/app/src/main/res/layout/mainapp.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:weightSum="3"
+
     android:layout_height="match_parent"
     tools:context="youssef.com.alex_commercial.mainapp">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2.8"
         android:id="@+id/frame"></FrameLayout>
 
 
@@ -78,14 +82,15 @@
     <android.support.design.widget.BottomNavigationView
         android:layout_width="match_parent"
         android:id="@+id/botomview"
-        android:layout_height="50dp"
-        app:itemTextColor="@color/gray"
+        android:layout_height="0dp"
+        app:itemTextColor="@color/itemcolor"        android:layout_weight=".2"
         android:background="@color/white"
-        android:layout_alignParentBottom="true"
+       android:layout_gravity="bottom"
+
         app:menu="@menu/resoumenu">
 
     </android.support.design.widget.BottomNavigationView>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
