--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:weightSum="3"
     android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
         android:id="@+id/coverjpg"
-        android:layout_height="wrap_content" />
+        android:background="@color/gray1"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:background="@color/grayfat7"
-        android:layout_height="430dp"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:id="@+id/menurec">
 
     </android.support.v7.widget.RecyclerView>
