--- a/app/src/main/res/layout/trmsec.xml
+++ b/app/src/main/res/layout/trmsec.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:weightSum="3" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="@color/grayfat7"
-        android:layout_height="515dp"
+        android:layout_weight="3"
         android:id="@+id/recycle2"
         ></android.support.v7.widget.RecyclerView>
 </LinearLayout>
